Don't eat non-ascii characters when sending messages. Time for me to buy a few brown paper bags...

BUG: 162673

svn path=/trunk/KDE/kdepim/libkdepim/; revision=814242